name:                harky
version:             0.1.0.0
synopsis:            HTMLify Markdown
license:             ISC
license-file:        LICENSE
author:              Jonas Weber
maintainer:          mail@jonasw.de
build-type:          Simple
cabal-version:       >=1.10

executable harky
  main-is:             Main.lhs
  build-depends:       base
                     , tasty
                     , tasty-smallcheck
                     , tasty-quickcheck
                     , tasty-golden
                     , tasty-hunit
                     , bytestring
  default-language:    Haskell2010

test-suite test-harky
  type:                exitcode-stdio-1.0
  main-is:             Main.lhs
  default-language:    Haskell2010
  ghc-options:         -main-is testMain
  build-depends:       base
                     , tasty
                     , tasty-smallcheck
                     , tasty-quickcheck
                     , tasty-golden
                     , tasty-hunit
                     , bytestring

test-suite test-hlint
  build-depends:     base, hlint
  default-language:  Haskell2010 
  main-is:           HLintRunner.hs
  type:              exitcode-stdio-1.0 
